fixed mobile size padding

--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -23,7 +23,8 @@ $(document).ready(function() {
 			width:0
 		})
 		$('#content').animate({
-			marginLeft:parseInt($('#content').css('marginLeft'))-220
+			marginLeft:parseInt($('#content').css('marginLeft'))-220,
+			paddingLeft:0
 		})
 	}
 
