--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -4,7 +4,7 @@
 			%h6 Latest bits of advice
 		.small-4.columns
 			.text-right.show-for-medium-up
-				= link_to "Ask Question", '#', :class =>"button radius tiny alert"
+				-# link_to "Ask Question", '#', :class =>"button radius tiny alert"
 				= link_to "Add Advice", new_comment_path, :class => "button radius tiny"
 	%hr
 	=render 'layouts/feed_item'
