--- a/app/views/questions/index.haml
+++ b/app/views/questions/index.haml
@@ -1,6 +1,13 @@
 .large-9.large-offset-1.columns
-	%h4.bold Open Questions
-	%h5 Here you can ask questions about the companies you want to know about anonymously
+	.row
+		.large-9.columns
+			%h4.bold Open Questions
+			%h5 Here you can ask questions about the companies you want to know about anonymously
+		.large-3.columns.text-right		
+			%br
+			%br			
+			= link_to "Ask Question", "#", :class =>"button radius tiny alert"
+
 	%br
 	%br
 	
