--- a/app/views/staticpages/test1.haml
+++ b/app/views/staticpages/test1.haml
@@ -25,7 +25,7 @@
 		.large-offset-1.large-4.columns.sign-in-area
 			%br
 			%br
-			%h5.bold Join a community
+			%h3.bold Sign Up
 			%h6 Use your zmail to sign up in less than 30 seconds.
 			%br
 			%br
