--- a/app/views/staticpages/test2.haml
+++ b/app/views/staticpages/test2.haml
@@ -1,8 +1,7 @@
 .test2
 	.row.pad-top
-		.large-6.large-offset-1.columns.copywrite
 
-		.large-4.columns
+		.large-offset-4.large-4.columns.test2signup
 			%h5.bold Join a community
 			%h6 Sign up in 30 seconds. User your zmail or alumnimail. UNSW student & alumni exclusive. Quality advice.	
 			%br
