small fixes and onboarding page in progress

--- a/app/views/comments/show.haml
+++ b/app/views/comments/show.haml
@@ -8,7 +8,7 @@
 
 	%hr
 	.discussion-area.original
-		%b.feed-subtext Original Post
+		%b.feed-subtext= @comment.title
 		%br
 		=simple_format(@comment.body)
 
