--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -30,7 +30,7 @@
 			-# link_to current_user.username, '#', :class => 'navbar-text user-closed', :remote => true, :id => "user-control"
 
 .nav-collapse.text-right
-	= link_to image_tag('arrow-left.png', height: '30', width: '30'), '#', :id => "navbar-expand", :remote => true
+	= image_tag('arrow-left.png', height: '30', width: '30', :id => "navbar-expand", :remote => true)
 	%br
-	= link_to image_tag('arrow-right.png', height: '30', width: '30'), '#', :id => "navbar-collapsed", :remote => true
+	= image_tag('arrow-right.png', height: '30', width: '30', :id => "navbar-collapsed", :remote => true)
 
