--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,3 @@
-
 /* ========= SECTION: STYLE VARIABLES =========*/
 
 
@@ -7,7 +6,7 @@ $dark-orange:#DB7817;
 
 $dempoints-blue:#215B7F;
 $light-blue:#6799B2;
-
+$light-blue-2:#addbdb;
 /* greys */
 $light-grey: #F2F2F2;
 $background-grey: #f6f6f6;
@@ -64,7 +63,7 @@ h2{
 }
 
 .feed-subtext{
-	font-size:10px;
+	font-size:12px;
 }
 .row {min-width:100%;}
 
@@ -111,7 +110,9 @@ html {
 }
 
 .navbar{
-//	background-color:$dempoints-blue;
+	height: 100%;
+	background-color:$dempoints-blue;
+
 	padding:15px 0px 0px 30px;
 	font-size:18px !important;
 	line-height:50px;
@@ -193,6 +194,7 @@ textarea {
 
 .nav-item{
 	padding:10px 0px;
+	a{color:$light-blue-2;}
 	img{
 		
 	}
@@ -283,4 +285,10 @@ textarea {
 .test2signup{
 	color:white !important;
 	text-align:center;	
+	padding:40px;
+	background-color:$dempoints-blue;
+	h2{color:white;}
+	h5{color:#addbdb}
+//	 opacity:0.6;	
 }
+
