--- a/app/views/layouts/_feed_item.haml
+++ b/app/views/layouts/_feed_item.haml
@@ -10,7 +10,7 @@
 			=link_to comment_company.name, comment_company
 				
 			%br
-			= comment.body
+			= link_to comment.body, comment
 			.feed-subtext
 				-#	= link_to raw("Thank author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small", :remote => true
 				-# thanks = comment.upvotes.size 
