--- a/app/views/questions/new.haml
+++ b/app/views/questions/new.haml
@@ -2,18 +2,20 @@
 	$(document).ready(function() { $("#search").select2({  width: 'resolve', placeholder: "Sort by industry" });});
 	$(document).ready(function() { $("#search2").select2({  width: 'resolve', placeholder: "Sort by industry" });});
 
+.large-9.large-offset-1.columns
 
-%h3 Add a question about a company
-.row-fluid
-	.span7
-		= form_for @question do |f|
-			= f.collection_select :company_id, Company.order(:name), :id, :name, {}, :id => "search" 
-			%br
-			%br
-			= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name, {}, :id => "search2"
-			%br
-			%br
-			= f.text_area :question_content, :placeholder => "What is your question?"
-			= f.hidden_field :user_id, :value => current_user.id
-			= f.submit
+	%h3 Ask a question about a company
+	%br
+	.row-fluid
+		.span7
+			= form_for @question do |f|
+				= f.collection_select :company_id, Company.order(:name), :id, :name, {}, :id => "search" 
+				%br
+				%br
+				= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name, {}, :id => "search2"
+				%br
+				%br
+				= f.text_area :question_content, :placeholder => "What is your question?"
+				= f.hidden_field :user_id, :value => current_user.id
+				= f.submit
 	
