--- a/app/views/staticpages/test2.haml
+++ b/app/views/staticpages/test2.haml
@@ -1,21 +1,22 @@
 .test2
 	.row.pad-top
-
 		.large-offset-4.large-4.columns.test2signup
-			%h5.bold Join a community
-			%h6 Sign up in 30 seconds. User your zmail or alumnimail. UNSW student & alumni exclusive. Quality advice.	
-			%br
-			= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
-				= f.text_field :username, :placeholder => "Username", :class => "focus_"
-				= f.email_field :email, :placeholder => " Email"
-				= f.password_field :password, :placeholder => " Password  (6 or more characters)"
-				= f.hidden_field :role, :value => "student"
-				- if false
-					= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
-				%div= f.submit "Join Dempoints", :class => "button success radius small"
+			.test2-content
+				%h2.bold Dempoints
+				%h5 Share knowledge, give advice & build careers together
+				%h6
 				%br
-				%br
-			=link_to "Already have an account? Sign in", new_user_session_path, :class => "feed-subtext"
-			.errors
-			= devise_error_messages!
+				= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
+					= f.text_field :username, :placeholder => "Username", :class => "focus_"
+					= f.email_field :email, :placeholder => "  Sign up with your unsw zmail"
+					= f.password_field :password, :placeholder => " Password  (6 or more characters)"
+					= f.hidden_field :role, :value => "student"
+					- if false
+						= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
+					%div= f.submit "Join Dempoints", :class => "button success radius small"
+					%br
+					%br
+				=link_to "Already have an account? Sign in", new_user_session_path, :class => "feed-subtext"
+				.errors
+				= devise_error_messages!
 		.large-1.columns
