added basic onbarding

--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -96,5 +96,28 @@ $(document).ready(function() {
 	})
 
 
+	//for onboarding pages
+	$('.box').click(function() {
+	    $('.box').each( function() {
+	        if ($(this).offset().left < 0) {
+	            $(this).css("left", "300%");
+	        }
+	    });
+
+	    $(this).animate({
+	         left: '-100%'
+	     }, 500);
+
+	     if ($(this).next().size() > 0) {
+	         $(this).next().animate({
+	             left: '50%'
+	         }, 500);
+	     } else {
+	         $(this).prevAll().last().animate({
+	             left: '50%'
+	         }, 500);
+	     }
+	});
+
 
 });
