--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -292,3 +292,66 @@ textarea {
 //	 opacity:0.6;	
 }
 
+
+
+body {
+    padding: 0px;    
+}
+
+#slide-area {
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 350px;
+    overflow: hidden;  
+}
+
+.box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+	padding:40px;
+    left: 50%;
+    top: 40px;
+    margin-left: -50%;
+	h5{color:$dempoints-blue;}
+	color:$dark-grey;
+}
+
+#box1 {
+    background-color: $light-grey;
+    left: -100%;
+}
+
+#box2 {
+    background-color: $light-grey;
+}
+
+#box3 {
+    background-color: $light-grey;
+    left: 300%;
+}
+
+#box4 {
+    background-color: $light-grey;
+    left: 300%;
+}
+
+#box5 {
+    background-color: blue;
+    left: 300%;
+}
+
+.bottom-message{
+	padding-top:100px;
+	font-size:10px;
+	color:$dempoints-blue;
+}
+
+.onboarding-comment{
+	padding:20px;
+	margin-top:20px;
+	font-size:14px;
+	border:1px solid $dark-grey;
+}
