updated navbar and onboarding

--- a/app/views/dashboards/onboarding.haml
+++ b/app/views/dashboards/onboarding.haml
@@ -10,11 +10,19 @@
 	#slide-area
 		#box1.box
 			%h5.bold 		
-				Now let's get started!
+				Dempoints is better when more friends are on it.
+			%br
+			.onboarding-message
+				People are more excited to help and give advice when they know it can help more people at once. You can be helped more when you have a busting community. We unashamedly want to create a
+				=link_to "Network Effect", "http://en.wikipedia.org/wiki/Network_effect"
+				for student career advice.
 				%br
 				%br
-				%br								
-				=link_to "Im good to go!", root_path, :class => "button success radius"
+				To help others, yourself and the Dempoints Team, we would be humbled if you could invite just one friend who studies at UNSW onto the website. 
+				%br
+				%br
+						
+				=link_to "Im good to go!", root_path, :class => "button success radius small"
 		#box2.box 
 			%h5.bold 
 				Dempoints has career advice from other students.
