--- a/app/views/layouts/_insidebar.haml
+++ b/app/views/layouts/_insidebar.haml
@@ -6,6 +6,10 @@
 	.insidebar-item
 		= link_to edit_user_registration_path do
 			Account Settings
+			
+	.insidebar-item
+		= link_to root_path do
+			Our Strategy
 	.insidebar-item
 		= link_to(destroy_user_session_path,:method =>"DELETE") do
 			Log Out
