--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,7 +79,7 @@ html {
 	left: 220px;
 	margin-left: -220px;
 	position: relative;
-	width: 220px;
+	width: 90px;
 	overflow-y: auto;
 }
 
@@ -87,7 +87,7 @@ html {
 	background-color:$light-grey;
 	float: left;
 	left: 220*2px;
-	margin-left: -220px;
+	margin-left: -350px;
 	position: relative;
 	width: 0px;
 	overflow-y: auto;
@@ -99,7 +99,7 @@ html {
 }
 
 #content {
-	margin-left:220px;
+	margin-left:90px;
 	padding-left:20px;
 	overflow-y: auto;
 }
@@ -112,7 +112,6 @@ html {
 .navbar{
 	height: 100%;
 	background-color:$dempoints-blue;
-
 	padding:15px 0px 0px 30px;
 	font-size:18px !important;
 	line-height:50px;
@@ -252,16 +251,19 @@ textarea {
 .nav-collapse{
 	position:fixed;
 	bottom:0px;
-	width:220px;
+	width:90px;
 	height:60px;
 	padding:15px 15px 50px 30px;
 }
 
+.navbar-text{
+	display:none;
+}
 .nav-collapse:hover{
 	background-color:$light-blue;
 }
 
-#navbar-collapsed{
+#navbar-expand{
 	display:none;
 }
 
@@ -303,7 +305,7 @@ body {
     margin: 0px;
     padding: 0px;
     width: 100%;
-    height: 350px;
+    height: 500px;
     overflow: hidden;  
 }
 
@@ -352,6 +354,11 @@ body {
 .onboarding-comment{
 	padding:20px;
 	margin-top:20px;
-	font-size:14px;
+
+
 	border:1px solid $dark-grey;
+}
+
+.onboarding-message{
+	line-height:25px !important;	
 }
