--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -278,6 +278,7 @@ textarea {
 	background-size:cover;
 	height:700px;
 	background-position: 50% 80%;
+	background-color: rgba(31, 91, 127, 0.9);
 }
 
 .test-tag{
@@ -288,7 +289,7 @@ textarea {
 	color:white !important;
 	text-align:center;	
 	padding:40px;
-	background-color:$dempoints-blue;
+	background-color: rgba(31, 91, 127, 0.9);
 	h2{color:white;}
 	h5{color:#addbdb}
 //	 opacity:0.6;	
