--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -1,23 +1,5 @@
-.homepage
-	.row.pad-top
-		.large-6.large-offset-1.columns.copywrite
-			%h2.bold Make your future
-			%br Read priceless advice. Learn & Grow. Give back & help.
-		.large-4.columns.sign-in-area
-			%h5.bold Join a community
-			%h6 Sign up in 30 seconds. User your zmail or alumnimail. UNSW student & alumni exclusive. Quality advice.	
-			%br
-			= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
-				= f.text_field :username, :placeholder => "Username", :class => "focus_"
-				= f.email_field :email, :placeholder => " Email"
-				= f.password_field :password, :placeholder => " Password  (6 or more characters)"
-				= f.hidden_field :role, :value => "student"
-				- if false
-					= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
-				%div= f.submit "Join Dempoints", :class => "button success radius small"
-				%br
-				%br
-			=link_to "Already have an account? Sign in", new_user_session_path, :class => "feed-subtext"
-			.errors
-			= devise_error_messages!
-		.large-1.columns
+-ab_test("SignUp", "3points", "BgPoint") do |page|
+	-if page == "3points"
+		=render 'staticpages/test1' 
+	-elsif page == "BgPoint"
+		=render 'staticpages/test2' 
