--- a/app/views/layouts/_signed_in_page.html.erb
+++ b/app/views/layouts/_signed_in_page.html.erb
@@ -11,7 +11,7 @@
 	<div class ="show-for-small-only">
 		<nav class="top-bar" data-topbar>
 			<ul class="title-area"> 
-				<li class="name"> <h1><%= link_to "DemPoints", root_path%></h1> </li>
+				<li class="name"> <h1><%= link_to "dempoints", root_path%></h1> </li>
 				<li class="toggle-topbar menu-icon"><a href="#"></a></li>
 			</ul> 
 			<section class="top-bar-section">
