--- a/app/views/dashboards/onboarding.haml
+++ b/app/views/dashboards/onboarding.haml
@@ -22,7 +22,7 @@
 				%br
 				%br
 						
-				=link_to "Im good to go!", root_path, :class => "button success radius small"
+				=link_to "I'm good to go!", root_path, :class => "button success radius small"
 		#box2.box 
 			%h5.bold 
 				Dempoints has career advice from other students.
