--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -373,3 +373,11 @@ body {
 .onboarding-message{
 	line-height:25px !important;	
 }
+
+.index-area{
+	background-color:$light-grey;
+	padding:20px;
+	font-size:11px;
+	margin-bottom:40px;
+	line-height:15px;
+}
