--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -3,7 +3,7 @@ $(document).ready(function() {
 	//GET BROWSER WINDOW HEIGHT
 	var currHeight = $(window).height();
 	var clickedUser = false;
-	var collapsedNav = false;
+	var collapsedNav = true;
 	//var currWidth = $('#content').width;
 	//SET HEIGHT OF SIDEBAR AND CONTENT ELEMENTS
 	$('#sidebar, #content, #insidebar').css('height', currHeight);
@@ -34,66 +34,73 @@ $(document).ready(function() {
 
 
 	$('#navbar-expand').click(function(){
-		$('#sidebar').animate({
-			width:90
-		})
-		$('#content').animate({
-			marginLeft:parseInt($('#content').css('marginLeft'))-130
-		})
-		$('#insidebar').animate({
-			marginLeft:parseInt($('#insidebar').css('marginLeft'))-130
-		})
-		$('.navbar-text').hide()
-		$(this).hide()
-		$('#navbar-collapsed').show()
-		$('.nav-collapse').animate({
-			width:parseInt($('.nav-collapse').css('width'))-130
-		})
-		collapsedNav = true;
-		$(this).hide
+		if(collapsedNav==false){
+			$('#sidebar').animate({
+				width:90
+			})
+			$('#content').animate({
+				marginLeft:parseInt($('#content').css('marginLeft'))-130
+			})
+			$('#insidebar').animate({
+				marginLeft:parseInt($('#insidebar').css('marginLeft'))-130
+			})
+			$('.navbar-text').hide()
+			$(this).hide()
+			$('#navbar-collapsed').show()
+			$('.nav-collapse').animate({
+				width:parseInt($('.nav-collapse').css('width'))-130
+			})
+			collapsedNav = true;
+			$(this).hide
+		}
 	});
 
 	$('#navbar-collapsed').click(function(){
-		$('#sidebar').animate({
-			width:220
-		})
-		if(clickedUser==false){
-			$('#content').animate({	
-				marginLeft:220
+		if(collapsedNav==true){
+			$('#sidebar').animate({
+				width:220
 			})
-		} else {
-			$('#content').animate({
-				marginLeft:parseInt($('#content').css('marginLeft'))+130
+			if(clickedUser==false){
+				$('#content').animate({	
+					marginLeft:220
+				})
+			} else {
+				$('#content').animate({
+					marginLeft:parseInt($('#content').css('marginLeft'))+130
+				})
+			}
+			$('#insidebar').animate({
+				marginLeft:parseInt($('#insidebar').css('marginLeft'))+130
 			})
+			$('.navbar-text').delay(250).show(150)
+			$(this).hide()
+			$('#navbar-expand').show()
+			$('.nav-collapse').animate({
+				width:parseInt($('.nav-collapse').css('width'))+130
+			})
+			collapsedNav = false;
 		}
-		$('#insidebar').animate({
-			marginLeft:parseInt($('#insidebar').css('marginLeft'))+130
-		})
-		$('.navbar-text').delay(250).show(150)
-		$(this).hide()
-		$('#navbar-expand').show()
-		$('.nav-collapse').animate({
-			width:parseInt($('.nav-collapse').css('width'))+130
-		})
 	})
 
 	$('#user-control').click(function(){
 		if(clickedUser==false){ 
+			clickedUser=true;
 			$('#insidebar').animate({
 				width:220
 			})
 			$('#content').animate({
 				marginLeft:parseInt($('#content').css('marginLeft'))+220
 			})
-			clickedUser=true;
+
 		}else{
+			clickedUser=false;
 			$('#insidebar').animate({
 				width:0
 			})
 			$('#content').animate({
 				marginLeft:parseInt($('#content').css('marginLeft'))-220
 			})
-			clickedUser=false;
+
 		}
 
 	})
