--- a/app/views/industries/index.html.erb
+++ b/app/views/industries/index.html.erb
@@ -3,7 +3,9 @@
 <%= link_to "New Industry", industries_path %>
 
 <br><% @industries.each do |f| %> </br>
-	<li> <%= f.industry %> <%= f.id %></li>
+	<%= link_to f do %>
+		<li> <%= f.industry %> <%= f.id %></li>
+	<% end %>
 <% end %>
 
 
