added spacing for indsutries list on dashbaord

--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -6,7 +6,7 @@
 				%br
 				-@industries.each do |industry|
 					=link_to industry.industry, industry
-				
+					&nbsp &nbsp - 
 				%br
 				%br
 				%b Majors
