--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -2,11 +2,11 @@
 	.row.negative-padding
 		.small-12.columns
 			.index-area
-				%b Industries
+				%b List of industries
 				%br
 				-@industries.each do |industry|
 					=link_to industry.industry, industry
-					&nbsp &nbsp - 
+					&nbsp &nbsp - &nbsp &nbsp 
 
 	.row.negative-padding
 		.small-4.columns
