testing tooltip live

--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -129,5 +129,15 @@ $(document).ready(function() {
 	     }
 	});
 
-
+	//Focus on the key box per page
+	$("#focus").focus();
+	var tooltips = $( "[title]" ).tooltip();
+    $( "<button>" )
+      .text( "Show help" )
+      .button()
+      .click(function() {
+        tooltips.tooltip( "open" );
+      })
+      .insertAfter( "form" );
+  });
 });
