--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -381,3 +381,15 @@ body {
 	margin-bottom:40px;
 	line-height:24px;
 }
+label {
+  display: inline-block; width: 5em;
+}
+fieldset div {
+  margin-bottom: 2em;
+}
+fieldset .help {
+  display: inline-block;
+}
+.ui-tooltip {
+  width: 310px;
+}
