--- a/app/views/staticpages/_test1.haml
+++ b/app/views/staticpages/_test1.haml
@@ -29,7 +29,7 @@
 			%br
 			%br
 			= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
-				= f.text_field :username, :placeholder => "Username", :class => "focus_"
+				= f.text_field :username, :placeholder => "Username", :id => "focus"
 				= f.email_field :email, :placeholder => "  Sign up with your unsw zmail"
 				= f.password_field :password, :placeholder => " Password  (6 or more characters)"
 				= f.hidden_field :role, :value => "student"
