--- a/app/views/staticpages/_test2.haml
+++ b/app/views/staticpages/_test2.haml
@@ -7,8 +7,8 @@
 				%h6
 				%br
 				= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
-					= f.text_field :username, :placeholder => "Username", :class => "focus_"
-					= f.email_field :email, :placeholder => "  Sign up with your unsw zmail"
+					= f.text_field :username, :placeholder => "Username", :id => "focus"
+					= f.email_field :email, :placeholder => "  Sign up with your unsw zmail", :title => "A valid unsw email ends in @student.unsw.edu.au"
 					= f.password_field :password, :placeholder => " Password  (6 or more characters)"
 					= f.hidden_field :role, :value => "student"
 					- if false
