--- a/app/views/staticpages/_test2.haml
+++ b/app/views/staticpages/_test2.haml
@@ -6,9 +6,11 @@
 				%h5 Share knowledge, give advice & build careers together
 				%h6
 				%br
+				
 				= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
+					= devise_error_messages!
 					= f.text_field :username, :placeholder => "Username", :id => "focus"
-					= f.email_field :email, :placeholder => "  Sign up with your unsw zmail", :title => "A valid unsw email ends in @student.unsw.edu.au"
+					= f.email_field :email, :placeholder => "  Sign up with your unsw zmail", :title => "A valid unsw email looks like 'z1234567@student.unsw.edu.au' "
 					= f.password_field :password, :placeholder => " Password  (6 or more characters)"
 					= f.hidden_field :role, :value => "student"
 					- if false
