cleaned up form on bg2

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -284,7 +284,7 @@ textarea {
 	background-size:cover;
 	height:700px;
 	background-position: 50% 80%;
-	background-color: rgba(31, 91, 127, 0.9);
+	background-color: rgba(31, 91, 127, 0.8);
 	.row{
 		background-color: rgba(31, 91, 127, 0.9);
 	}
@@ -302,6 +302,10 @@ textarea {
 	h2{color:white;}
 	h5{color:#addbdb}
 //	 opacity:0.6;	
+	input{
+		margin:0px;
+		box-shadow:0 !important;
+	}
 }
 
 
