--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,8 +40,9 @@ a:hover{
 
 body {
 	font-family: 'Oxygen', sans-serif !important;
-	font-size:15px;
+	font-size:14px;
 	height:100%;
+	padding: 0px;    
 
 }
 
@@ -66,6 +67,9 @@ h2{
 	
 	.feed-subtext a{
 		color:$dempoints-blue;
+	}
+	p{
+		font-size:14px !important;
 	}
 }
 
@@ -317,10 +321,7 @@ textarea {
 
 
 
-body {
-    padding: 0px;    
-	height: 100%;
-}
+
 
 #slide-area {
     position: absolute;
