--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,7 +60,7 @@ h2{
 }
 
 .feed-text{
-	line-height:25px;
+	line-height:18px;
 	a{
 		color:#333;
 	}
@@ -75,7 +75,13 @@ h2{
 
 .feed-subtext{
 	font-size:12px;
+
 }
+
+.time-subtext{
+	color:#888;
+}
+
 .row {min-width:100%;}
 
 /* ========= END SECTION: UNIVERSALS =========*/
