show user sign up warings

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -421,3 +421,11 @@ label {
 	a{color:white;}
 }
 
+.errors{
+	h2{
+		font-size:16px;
+		font-weight:700;
+		color:$dark-red;
+	}
+	font-size:14px;
+}
