--- a/app/views/layouts/_feed_item.haml
+++ b/app/views/layouts/_feed_item.haml
@@ -4,6 +4,16 @@
 	.row
 		.small-2.columns
 			= link_to image_tag(comment_company.logo.url(:thumb)), comment_company			
+			%br
+			%br
+			.thank-area
+				= link_to "Thank Author", {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "thank-button"
+				%br
+				%br								
+				- thanks = comment.upvotes.size 
+				- unless thanks == 0 
+					=thanks
+					have given thanks
 		.small-10.columns.feed-text
 			%b= comment.title
 			\-
@@ -12,12 +22,8 @@
 			%br
 			= link_to simple_format(comment.body), comment
 			.feed-subtext
-				-#	= link_to raw("Thank author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small", :remote => true
-				-# thanks = comment.upvotes.size 
-				-# unless thanks == 0 
-				-#	%span[comment]
-				-#		=thanks
-				-# => 	have given thanks
+
+
 				
 				-if discussion_number == 0
 					%b=link_to "Comment", comment
