--- a/app/views/layouts/_feed_item.haml
+++ b/app/views/layouts/_feed_item.haml
@@ -6,6 +6,7 @@
 			= link_to image_tag(comment_company.logo.url(:thumb)), comment_company			
 			%br
 			%br
+			%br
 			.thank-area
 				= link_to "Thank Author", {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "thank-button"
 				%br
@@ -13,7 +14,10 @@
 				- thanks = comment.upvotes.size 
 				- unless thanks == 0 
 					=thanks
-					have given thanks
+					-if thanks == 1
+						person has thanked the author
+					-else
+						people have thanked the author
 		.small-10.columns.feed-text
 			%b= comment.title
 			\-
